# page-stream-segmentation

./: .gitattributes  .gitignore  LICENCE.md  README.md  pyproject.toml
Model Training/: TextModel_Training.ipynb
app/: main.py
app/data_models/: prediction.py
app/pss/: model.py  model_img.py
app/pss/models/: tobacco800_image_prev-page.hdf5  tobacco800_image_single-page.hdf5
app/pss/models/bert-text-model/: config.json
app/routers/: page_stream_segmentation.py
document_stream_builder/: LICENCE.md  README.md  convert_tiff_to_png.py  document_stream_builder.py  images_to_pdf.py
model_training/: BERT_Model_SinglePage.ipynb  CSV_Generation.ipynb  Data_Preparation.ipynb  ImageModel_Training.ipynb  MultiModal_Combination.ipynb  README.md  TextModel_Training.ipynb
model_training/additional_models/: InceptionResNetV2_Training.ipynb  README.md  ResNet50_Training.ipynb  VGG19_Training.ipynb  Xception_Training.ipynb
