[tool.poetry]
name = "page-stream-segmentation"
version = "0.1.0"
description = ""
authors = ["Alexander Giagoulas <alexander.giagoulas@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
